# starting-ragchatbot-codebase

./: .gitignore  CLAUDE.md  frontend-changes.md  pyproject.toml
.claude/: settings.local.json
backend/: ai_generator.py  app.py  search_tools.py
backend/tests/: conftest.py  test_ai_generator.py  test_api.py  test_integration.py  test_rag_system.py  test_search_tools.py
frontend/: index.html  script.js  style.css
scripts/: format.sh  lint.sh
